Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty
    4           | error RC

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier error LC

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT error RC

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec
   27        | error COMMA

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | error LC

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | error SEMI
   40     | Exp error SEMI

   41 DefList: Def DefList
   42        | %empty

   43 Def: Specifier DecList SEMI
   44    | Specifier error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList
   47        | error COMMA

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp
   50    | error RP

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | Exp LB error RB
   70    | error RP

   71 Args: Exp COMMA Args
   72     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 4 8 15 21 24 27 30 39 40 44 47 50 69 70
INT (258) 20 67
FLOAT (259) 68
ID (260) 16 18 19 22 23 62 63 65 66
TYPE (261) 11
LC (262) 8 13 29 30
RC (263) 4 13 15 29
LOWER_THAN_ELSE (264)
STRUCT (265) 13 14 15
RETURN (266) 35
IF (267) 36 37
ELSE (268) 37
WHILE (269) 38
SEMI (270) 5 6 33 35 39 40 43 44
COMMA (271) 10 25 27 46 47 71
ASSIGNOP (272) 49 51
OR (273) 53
AND (274) 52
RELOP (275) 54
PLUS (276) 55
MINUS (277) 56 60
STAR (278) 57
DIV (279) 58
NOT (280) 61
HIGHER_THAN_MINUS (281)
LP (282) 22 23 36 37 38 59 62 63
RP (283) 22 23 24 36 37 38 50 59 62 63 70
LB (284) 20 64 69
RB (285) 20 21 64 69
DOT (286) 65


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3 4, on right: 1 2
ExtDef (35)
    on left: 5 6 7 8, on right: 2
ExtDecList (36)
    on left: 9 10, on right: 5 10
Specifier (37)
    on left: 11 12, on right: 5 6 7 8 28 43 44
StructSpecifier (38)
    on left: 13 14 15, on right: 12
OptTag (39)
    on left: 16 17, on right: 13
Tag (40)
    on left: 18, on right: 14
VarDec (41)
    on left: 19 20 21, on right: 9 10 20 28 48 49
FunDec (42)
    on left: 22 23 24, on right: 7
VarList (43)
    on left: 25 26 27, on right: 22 25
ParamDec (44)
    on left: 28, on right: 25 26
CompSt (45)
    on left: 29 30, on right: 7 34
StmtList (46)
    on left: 31 32, on right: 29 31
Stmt (47)
    on left: 33 34 35 36 37 38 39 40, on right: 31 36 37 38
DefList (48)
    on left: 41 42, on right: 13 29 41
Def (49)
    on left: 43 44, on right: 41
DecList (50)
    on left: 45 46 47, on right: 43 46
Dec (51)
    on left: 48 49 50, on right: 45 46
Exp (52)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70, on right: 33 35 36 37 38 40 49 51 52 53 54 55 56 57 58 59
    60 61 64 65 69 71 72
Args (53)
    on left: 71 72, on right: 62 71


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    4 ExtDefList: error . RC

    RC  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . error RC

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 17 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt
    8       | Specifier . error LC

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    4 ExtDefList: error RC .

    $default  reduce using rule 4 (ExtDefList)


State 10

   15 StructSpecifier: STRUCT error . RC

    RC  shift, and go to state 22


State 11

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 12

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 23


State 13

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

    8 ExtDef: Specifier error . LC
   21 VarDec: error . RB
   24 FunDec: error . RP

    LC  shift, and go to state 24
    RP  shift, and go to state 25
    RB  shift, and go to state 26


State 17

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 27

    $default  reduce using rule 19 (VarDec)


State 18

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 19

    5 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 28


State 20

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 29
    LB     shift, and go to state 30

    $default  reduce using rule 9 (ExtDecList)


State 21

    7 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 31
    LC     shift, and go to state 32

    CompSt  go to state 33


State 22

   15 StructSpecifier: STRUCT error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 23

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 35
    Def              go to state 36


State 24

    8 ExtDef: Specifier error LC .

    $default  reduce using rule 8 (ExtDef)


State 25

   24 FunDec: error RP .

    $default  reduce using rule 24 (FunDec)


State 26

   21 VarDec: error RB .

    $default  reduce using rule 21 (VarDec)


State 27

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 38

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 41


State 28

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 29

   10 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 42
    ID     shift, and go to state 43

    ExtDecList  go to state 44
    VarDec      go to state 20


State 30

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 45


State 31

   30 CompSt: error . LC

    LC  shift, and go to state 46


State 32

   29 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 36


State 33

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 34

   43 Def: Specifier . DecList SEMI
   44    | Specifier . error SEMI

    error  shift, and go to state 48
    ID     shift, and go to state 43

    VarDec   go to state 49
    DecList  go to state 50
    Dec      go to state 51


State 35

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 52


State 36

   41 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 36


State 37

   27 VarList: error . COMMA

    COMMA  shift, and go to state 54


State 38

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 39

   28 ParamDec: Specifier . VarDec

    error  shift, and go to state 42
    ID     shift, and go to state 43

    VarDec  go to state 55


State 40

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 56


State 41

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 26 (VarList)


State 42

   21 VarDec: error . RB

    RB  shift, and go to state 26


State 43

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 44

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 45

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 58


State 46

   30 CompSt: error LC .

    $default  reduce using rule 30 (CompSt)


State 47

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    LC      shift, and go to state 32
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 70
    Stmt      go to state 71
    Exp       go to state 72


State 48

   21 VarDec: error . RB
   44 Def: Specifier error . SEMI
   47 DecList: error . COMMA
   50 Dec: error . RP

    SEMI   shift, and go to state 73
    COMMA  shift, and go to state 74
    RP     shift, and go to state 75
    RB     shift, and go to state 26


State 49

   20 VarDec: VarDec . LB INT RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 76
    LB        shift, and go to state 30

    $default  reduce using rule 48 (Dec)


State 50

   43 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 77


State 51

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 78

    $default  reduce using rule 45 (DecList)


State 52

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 53

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 54

   27 VarList: error COMMA .

    $default  reduce using rule 27 (VarList)


State 55

   20 VarDec: VarDec . LB INT RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 30

    $default  reduce using rule 28 (ParamDec)


State 56

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 57

   25 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 79
    ParamDec         go to state 41


State 58

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 59

   30 CompSt: error . LC
   39 Stmt: error . SEMI
   70 Exp: error . RP

    LC    shift, and go to state 46
    SEMI  shift, and go to state 80
    RP    shift, and go to state 81


State 60

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 61

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 62

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 82

    $default  reduce using rule 66 (Exp)


State 63

   35 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 84


State 64

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 85


State 65

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 86


State 66

   60 Exp: MINUS . Exp

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 87


State 67

   61 Exp: NOT . Exp

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 88


State 68

   59 Exp: LP . Exp RP

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 89


State 69

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 70

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 90


State 71

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    LC      shift, and go to state 32
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 91
    Stmt      go to state 71
    Exp       go to state 72


State 72

   33 Stmt: Exp . SEMI
   40     | Exp . error SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    error     shift, and go to state 92
    SEMI      shift, and go to state 93
    ASSIGNOP  shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    STAR      shift, and go to state 100
    DIV       shift, and go to state 101
    LB        shift, and go to state 102
    DOT       shift, and go to state 103


State 73

   44 Def: Specifier error SEMI .

    $default  reduce using rule 44 (Def)


State 74

   47 DecList: error COMMA .

    $default  reduce using rule 47 (DecList)


State 75

   50 Dec: error RP .

    $default  reduce using rule 50 (Dec)


State 76

   49 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 104


State 77

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


State 78

   46 DecList: Dec COMMA . DecList

    error  shift, and go to state 105
    ID     shift, and go to state 43

    VarDec   go to state 49
    DecList  go to state 106
    Dec      go to state 51


State 79

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 80

   39 Stmt: error SEMI .

    $default  reduce using rule 39 (Stmt)


State 81

   70 Exp: error RP .

    $default  reduce using rule 70 (Exp)


State 82

   62 Exp: ID LP . Args RP
   63    | ID LP . RP

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68
    RP     shift, and go to state 107

    Exp   go to state 108
    Args  go to state 109


State 83

   70 Exp: error . RP

    RP  shift, and go to state 81


State 84

   35 Stmt: RETURN Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    SEMI      shift, and go to state 110
    ASSIGNOP  shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    STAR      shift, and go to state 100
    DIV       shift, and go to state 101
    LB        shift, and go to state 102
    DOT       shift, and go to state 103


State 85

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 111


State 86

   38 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 112


State 87

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    LB   shift, and go to state 102
    DOT  shift, and go to state 103

    $default  reduce using rule 60 (Exp)


State 88

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    LB   shift, and go to state 102
    DOT  shift, and go to state 103

    $default  reduce using rule 61 (Exp)


State 89

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    STAR      shift, and go to state 100
    DIV       shift, and go to state 101
    RP        shift, and go to state 113
    LB        shift, and go to state 102
    DOT       shift, and go to state 103


State 90

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 91

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 92

   40 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 114


State 93

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 94

   51 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 115


State 95

   53 Exp: Exp OR . Exp

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 116


State 96

   52 Exp: Exp AND . Exp

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 117


State 97

   54 Exp: Exp RELOP . Exp

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 118


State 98

   55 Exp: Exp PLUS . Exp

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 119


State 99

   56 Exp: Exp MINUS . Exp

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 120


State 100

   57 Exp: Exp STAR . Exp

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 121


State 101

   58 Exp: Exp DIV . Exp

    error  shift, and go to state 83
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 122


State 102

   64 Exp: Exp LB . Exp RB
   69    | Exp LB . error RB

    error  shift, and go to state 123
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 124


State 103

   65 Exp: Exp DOT . ID

    ID  shift, and go to state 125


State 104

   49 Dec: VarDec ASSIGNOP Exp .
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    STAR      shift, and go to state 100
    DIV       shift, and go to state 101
    LB        shift, and go to state 102
    DOT       shift, and go to state 103

    $default  reduce using rule 49 (Dec)


State 105

   21 VarDec: error . RB
   47 DecList: error . COMMA
   50 Dec: error . RP

    COMMA  shift, and go to state 74
    RP     shift, and go to state 75
    RB     shift, and go to state 26


State 106

   46 DecList: Dec COMMA DecList .

    $default  reduce using rule 46 (DecList)


State 107

   63 Exp: ID LP RP .

    $default  reduce using rule 63 (Exp)


State 108

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   71 Args: Exp . COMMA Args
   72     | Exp .

    COMMA     shift, and go to state 126
    ASSIGNOP  shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    STAR      shift, and go to state 100
    DIV       shift, and go to state 101
    LB        shift, and go to state 102
    DOT       shift, and go to state 103

    $default  reduce using rule 72 (Args)


State 109

   62 Exp: ID LP Args . RP

    RP  shift, and go to state 127


State 110

   35 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 35 (Stmt)


State 111
